Update print statement from 'Hello' to 'Goodbye'

--- a/detail-order.html
+++ b/detail-order.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Status Pesanan — Arufkuy Store</title>
+  <link rel="icon" type="image/x-icon" href="icon.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -513,6 +514,7 @@
     window.viewInvoice = viewInvoice;
   </script>
 </body>
+
 
 
 </html>
