--- a/detail-product.html
+++ b/detail-product.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Detail Produk — Arufkuy Store</title>
+  <link rel="icon" type="image/x-icon" href="icon.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -1555,5 +1556,6 @@
   </script>
   <!--End of Tawk.to Script-->
 </body>
+
 
 </html>
