--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Arufkuy Store — Digital Goods</title>
   <meta name="description" content="Arufkuy Store menyediakan digital goods dengan proses cepat dan aman." />
   <meta name="theme-color" content="#0b1220" />
-  <link rel="icon" type="image/x-icon" href="icon.png">
+  <link rel="icon" type="image/x-icon" href="/arufkuy-store/icon.png">
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -1752,3 +1752,4 @@
 
 
 </html>
+
